--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "remark": "^10.0.1",
+    "remark-react": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
